argocd/media/arr/lidarr/lidarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
  selector:
    app: lidarr
