argocd/media/arr/lidarr/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-internal-route
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["lidarr.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: lidarr
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
